@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import nl.ramsolutions.sw.magik.MagikFile;
 import nl.ramsolutions.sw.magik.MagikVisitor;
 import nl.ramsolutions.sw.magik.checks.CheckList;
@@ -78,8 +77,7 @@ public class MagikSensor implements Sensor {
 
     final ProgressReport progressReport =
         new ProgressReport("Report about progress of Sonar Magik analyzer", SLEEP_PERIOD);
-    final List<String> filenames =
-        inputFiles.stream().map(InputFile::toString).collect(Collectors.toList());
+    final List<String> filenames = inputFiles.stream().map(InputFile::toString).toList();
     progressReport.start(filenames);
 
     for (final InputFile inputFile : inputFiles) {
